--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,3 +1,27 @@
-<p>
-  home works!
-</p>
+<form class="form text-center" role="search">
+  <div class="form-inline">
+    <input type="text" class="form-control" placeholder="Search">
+    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+  </div>
+</form>
+<div class="jumbotron text-center">
+  <p>Chart</p>
+</div>
+<div class="row">
+  <div class="col-md-3">
+    <h3>Private Notes</h3>
+    <p>Test Notes</p>
+  </div>
+  <div class="col-md-3">
+    <h3>Public Notes</h3>
+    <p>Test Notes</p>
+  </div>
+  <div class="col-md-3">
+    <h3>News</h3>
+    <p>Articles</p>
+  </div>
+  <div class="col-md-3">
+    <h3>Twitter</h3>
+    <p>Tweets</p>
+  </div>
+</div>
