--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -8,6 +8,7 @@
         <ul class="nav navbar-nav navbar-right">
           <li [routerLinkActive]="['active']"><a [routerLink]="['/login']">Login</a></li>
           <li [routerLinkActive]="['active']"><a [routerLink]="['/register']">Register</a></li>
+          <li><a (click)="onLogoutClick()" href="#">Logout</a></li>
         </ul>
       </div>
     </div>
