--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -6,11 +6,11 @@
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/dashboard']">Dashboard</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/profile']">Profile</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/login']">Login</a></li>
-        <li [routerLinkActive]="['active']"><a [routerLink]="['/register']">Register</a></li>
-        <li><a (click)="onLogoutClick()" href="#">Logout</a></li>
+        <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']"><a [routerLink]="['/dashboard']">Dashboard</a></li>
+        <li *ngIf="authService.loggedIn()" [routerLinkActive]="['active']"><a [routerLink]="['/profile']">Profile</a></li>
+        <li *ngIf="!authService.loggedIn()"[routerLinkActive]="['active']"><a [routerLink]="['/login']">Login</a></li>
+        <li *ngIf="!authService.loggedIn()"[routerLinkActive]="['active']"><a [routerLink]="['/register']">Register</a></li>
+        <li *ngIf="authService.loggedIn()"><a (click)="onLogoutClick()" href="#">Logout</a></li>
       </ul>
     </div>
   </div>
