--- a/angular-src/src/app/components/chart/chart.component.html
+++ b/angular-src/src/app/components/chart/chart.component.html
@@ -1,1 +1,7 @@
+<form class="form text-center" role="search">
+    <div class="form-inline">
+      <input type="text" class="form-control" placeholder="Search" name="symbol" [(ngModel)]="symbol">
+      <button type="submit" class="btn btn-default" (click)="updateChart(symbol)"><i class="glyphicon glyphicon-search"></i></button>
+    </div>
+  </form>
 <div id="chartdiv" class="jumbotron text-center" [style.width.%]='100' [style.height.%]='500'>Loading chart...</div>
