moved components/added styles/added stock/twitter calls to service

--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -8,6 +8,6 @@
 <div class="row">
   <app-privatenotes></app-privatenotes>
   <app-publicnotes></app-publicnotes>
-  <app-news></app-news>
+  <app-news [symbol]="symbol"></app-news>
   <app-twitter></app-twitter>
 </div>
