added sample chart and combined private/public

--- a/angular-src/src/app/components/news/news.component.html
+++ b/angular-src/src/app/components/news/news.component.html
@@ -1,4 +1,6 @@
-<div class="private-component col-md-3">
-  <h3>News</h3>
-  <p>Articles</p>
+<div class="col-md-4">
+  <div class="private-component">
+    <h3>News</h3>
+    <p>Articles</p>
+  </div>
 </div>
