--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -1,13 +1,15 @@
 <form class="form text-center" role="search">
   <div class="form-inline">
     <input type="text" class="form-control" placeholder="Search" name="symbol" [(ngModel)]="symbol">
-    <button type="submit" class="btn btn-default" ><i class="glyphicon glyphicon-search"></i></button>
+    <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
   </div>
 </form>
-<app-chart [symbol]="symbol"></app-chart>
-<div class="row">
-  <app-privatenotes></app-privatenotes>
-  <app-publicnotes></app-publicnotes>
-  <app-news [symbol]="symbol"></app-news>
-  <app-twitter></app-twitter>
+<app-chart></app-chart>
+<div class="container-fluid">
+  <div class="row">
+    <app-privatenotes></app-privatenotes>
+    <!-- <app-publicnotes></app-publicnotes> -->
+    <app-news [symbol]="symbol"></app-news>
+    <app-twitter></app-twitter>
+  </div>
 </div>
