--- a/angular-src/src/app/components/privatenotes/privatenotes.component.html
+++ b/angular-src/src/app/components/privatenotes/privatenotes.component.html
@@ -1,4 +1,9 @@
-<div class="private-component col-md-3">
-  <h3>Private Notes</h3>
-  <p>Notes</p>
+<div class="col-md-4">
+  <div class="private-component">
+    <ul class="nav nav-pills">
+      <li class="active"><a href="#"><h4>Public Notes</h4></a></li>
+      <li><a href="#"><h4>Private Notes</h4></a></li>
+    </ul>
+    <p>Notes</p>
+  </div>
 </div>
