--- a/angular-src/src/app/components/twitter/twitter.component.html
+++ b/angular-src/src/app/components/twitter/twitter.component.html
@@ -1,4 +1,6 @@
-<div class="private-component col-md-3">
-  <h3>Twitter</h3>
-  <p>Tweets</p>
+<div class="col-md-4">
+  <div class="private-component">
+    <h3>Twitter</h3>
+    <p>Tweets</p>
+  </div>
 </div>
