--- a/angular-src/src/app/components/news/news.component.html
+++ b/angular-src/src/app/components/news/news.component.html
@@ -1,6 +1,31 @@
 <div class="col-md-4">
   <div class="private-component">
     <h3>News</h3>
-    <p>Articles</p>
+    <ul class="listItemParent">
+        <li class="listItem">
+          <div class="titleLeft">iPhone 8 Notes</div><span class="dateRight">09/03/2017</span>
+          <div class="titleLeft">iPhone 8 lorem ipsum valoro.</div>
+        </li>
+        <li class="listItem">
+          <div class="titleLeft">iPhone 10 Notes</div><span class="dateRight">08/24/2017</span>
+          <div class="titleLeft">iPhone 10 lorem ipsum valoro.</div>
+        </li>
+        <li class="listItem">
+          <div class="titleLeft">iPhone X Notes</div><span class="dateRight">08/04/2017</span>
+          <div class="titleLeft">iPhone X lorem ipsum valoro.</div>
+        </li>
+        <li class="listItem">
+          <div class="titleLeft">iPhone XI Notes</div><span class="dateRight">07/16/2017</span>
+          <div class="titleLeft">iPhone XI lorem ipsum valoro.</div>
+        </li>
+        <li class="listItem">
+          <div class="titleLeft">iPhone XII Notes</div><span class="dateRight">06/30/2017</span>
+          <div class="titleLeft">iPhone XII lorem ipsum valoro.</div>
+        </li>
+        <li class="listItem">
+          <div class="titleLeft">iPhone XIII Notes</div><span class="dateRight">06/01/2017</span>
+          <div class="titleLeft">iPhone XIII lorem ipsum valoro.</div>
+        </li>
+      </ul>
   </div>
 </div>
