--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -1,21 +1,53 @@
 /* You can add global styles to this file, and also import other style files */
+
 .private-component {
-    border: #375a7f solid 1px;
-    border-radius: 10px;
-    text-align: center;
-    margin: 1px;
-    height: 400px;
+  border: #375a7f solid 1px;
+  border-radius: 10px;
+  text-align: center;
+  margin: 1px;
+  height: 400px;
 }
 
-
-.nav-tabs > li, .nav-pills > li {
-    float:none;
-    display:inline-block;
-    *display:inline; /* ie7 fix */
-     zoom:1; /* hasLayout ie7 trigger */
+.nav-tabs>li,
+.nav-pills>li {
+  float: none;
+  display: inline-block;
+  *display: inline;
+  /* ie7 fix */
+  zoom: 1;
+  /* hasLayout ie7 trigger */
 }
 
-.nav-tabs, .nav-pills {
-    text-align:center;
-    padding-top: 1px;
+.nav-tabs,
+.nav-pills {
+  text-align: center;
+  padding-top: 5px;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.listItemParent{
+    margin-left: -30px;
+    padding-right: 10px;
+}
+.listItem {
+  border: #375a7f solid 1px;
+  border-radius: 10px;
+  text-align: center;
+  margin: 3px;
+  padding:2px;
+  height: 50px;
+}
+
+.titleLeft {
+  float: left;
+  clear: both;
+  padding-left: 10px;
+}
+
+.dateRight {
+  float: right;
+  padding-right: 10px;
 }
