transformed stock data but no chart displays

--- a/angular-src/src/styles.css
+++ b/angular-src/src/styles.css
@@ -34,6 +34,7 @@ ul {
 }
 .listItem {
   border: #375a7f solid 1px;
+  background: black;
   border-radius: 10px;
   text-align: center;
   margin: 3px;
