--- a/angular-src/src/app/components/home/home.component.html
+++ b/angular-src/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
     <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
   </div>
 </form>
-<app-chart></app-chart>
+<app-chart [symbol]="symbol"></app-chart>
 <div class="container-fluid">
   <div class="row">
     <app-privatenotes></app-privatenotes>
