--- a/angular-src/src/app/components/news/news.component.html
+++ b/angular-src/src/app/components/news/news.component.html
@@ -2,10 +2,16 @@
   <div class="private-component">
     <h3>News</h3>
     <ul class="listItemParent">
-        <li class="listItem"cle *ngFor="let article of newsData">
-          <div class="titleLeft">iPhone 8 Notes</div><span class="dateRight">09/03/2017</span>
-          <div class="titleLeft">iPhone 8 lorem ipsum valoro.</div>
-        </li>
-      </ul>
+      <li class="listItem" cle *ngFor="let article of newsData">
+        <div class="titleLeft">iPhone 8 Notes</div>
+        <span class="dateRight">09/03/2017</span>
+        <div class="titleLeft">iPhone 8 lorem ipsum valoro.</div>
+      </li>
+      <li class="listItem">
+        <div class="titleLeft">iPhone XII Notes</div>
+        <span class="dateRight">06/30/2017</span>
+        <div class="titleLeft detail">iPhone XII lorem ipsum valoro.</div>
+      </li>
+    </ul>
   </div>
 </div>
