fixed news service call

--- a/angular-src/src/app/components/news/news.component.html
+++ b/angular-src/src/app/components/news/news.component.html
@@ -2,7 +2,7 @@
   <div class="private-component">
     <h3>News</h3>
     <ul class="listItemParent">
-      <li class="listItem" cle *ngFor="let article of newsData">
+      <li class="listItem">
         <div class="titleLeft">iPhone 8 Notes</div>
         <span class="dateRight">09/03/2017</span>
         <div class="titleLeft">iPhone 8 lorem ipsum valoro.</div>
