--- a/angular-src/src/app/components/privatenotes/privatenotes.component.html
+++ b/angular-src/src/app/components/privatenotes/privatenotes.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-4">
+<div class="">
   <div class="private-component">
     <ul class="nav nav-pills">
       <li class="active">
