--- a/angular-src/src/app/components/navbar/navbar.component.html
+++ b/angular-src/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" [routerLinkActive]="['active']" [routerLink]="['/']">Stocknotes - social stock research</a>
+      <a class="navbar-brand" [routerLinkActive]="['active']" [routerLink]="['/']"><h1>Stocknotes - social stock research</h1></a>
     </div>
 
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
